src/objects/vlocity_ins__DocumentToken__c.object
<CustomObject>
    <description>Stores tokens (variables) that are inserted in content of a Document Clause</description>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Description of token</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DocumentTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Template</label>
        <referenceTo>vlocity_ins__DocumentTemplate__c</referenceTo>
        <relationshipLabel>Document Tokens</relationshipLabel>
        <relationshipName>Document_Tokens</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TokenDataType__c</fullName>
        <label>Token Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TokenPath__c</fullName>
        <label>Token Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TokenSymbol__c</fullName>
        <description>Currently same as the token name</description>
        <label>Token Symbol</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Document Token</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>